# i18n_display

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
example/: Cargo.toml
example/locales/: en.yml  fr.yml
example/src/: lib.rs
impl/: Cargo.toml
impl/src/: generate.rs  lib.rs  parse.rs
locales/: ja.yml
playground/: Cargo.toml
playground/locales/: en.yml  ja.yml
playground/src/: debug.rs  impl_image.rs  lib.rs  main.rs
src/: i18n_display.rs  language_code.rs  lib.rs  to_i18n_string.rs
tests/: derive_for_enum.rs  derive_for_struct.rs
