[package]
name = "i18n_error"
description = """
i18n_error provides a convenient way to define and manage error messages with internationalization (i18n) support.
"""
version = "0.1.0"
edition = "2021"
authors = ["Daisuke Ito <daisuke.ito.cs@gmail.com>"]
license = "MIT"
keywords = ["i18n", "error", "message"]
readme = "README.md"
repository = "https://github.com/poi2/i18n_error"

[dependencies]
i18n_error_impl = { version = "0.1.0", path = "impl" }
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies]
rust-i18n = "3"
test-case = "3.3.1"

[workspace]
members = ["impl"]
