[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-i18n = "3"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
i18n_error = { path = "../" }

[dev-dependencies]
test-case = "3.3.1"

[package.metadata.i18n]
available-locales = ["en", "ja"]
default-locale = "en"
load-path = "locales"
